a few changes in html and css added a contact mail, added rollover color, fixed bug on narrow screens

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
   text-align: center;
 }
 
+/* HEADER */
 .header {
   background-color: #fff8da;
   width: 100vw;
@@ -41,6 +42,12 @@ body {
   top: 85vmin;
 }
 
+.logo .arrowdown a:hover,
+.logo .arrowdown a:focus {
+  opacity: 0.8;
+}
+
+/* BODY */
 .introduction {
   font-size: calc(1rem + 1vw);
   line-height: 120%;
@@ -53,7 +60,7 @@ body {
 }
 
 .teaser {
-  font-size: calc(2rem + 3vw);
+  font-size: calc(1.5rem + 3vw);
   font-weight: 900;
   text-transform: uppercase;
   letter-spacing: 0.3vw;
@@ -66,11 +73,11 @@ body {
   padding: 1rem;
   margin: 10px auto;
   width: 50vw;
-  min-width: 330px;
   max-width: 460px;
   line-height: 130%;
 }
 
+/* FOOTER */
 .footer {
   background-color: #333;
   color: #ddd;
@@ -79,16 +86,17 @@ body {
   margin-top: 4vw;
 }
 
-.footer .social {
-  margin-bottom: 2rem;
+.footer .contacts p + p {
+  margin-top: 1.5rem;
 }
 
-.footer .social a {
+.footer .contacts a {
   color: #fff8da;
   letter-spacing: 0.05rem;
   text-decoration: none;
 }
 
-.footer .social i {
-  font-size: 1.5rem;
+.footer .contacts a:hover,
+.footer .contacts a:focus {
+  color: #bb562d;
 }
